kubernetes/apps/observability/victoria-metrics/alert-instance/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.34.0/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vm-local-ingress
spec:
  rules:
    - host: "vm-local.${CLUSTER_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vmsingle-vm-local
                port:
                  number: 8429
---
